--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,11 @@
                 "-g",
                 "${file}",
                 "-o",
-                "${fileDirname}/${fileBasenameNoExtension}"
+                "${fileDirname}/${fileBasenameNoExtension}",
+                "-Wall",
+                "-pedantic",
+                "-pthread",
+                "-lrt"
             ],
             "options": {
                 "cwd": "${fileDirname}"
