--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "stdio.h": "c",
         "stdint.h": "c",
-        "semaphore.h": "c"
+        "semaphore.h": "c",
+        "stdbool.h": "c"
     }
 }
